// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handlebars-helpers talonApp returns script tags for talon app component 1`] = `
"<script type=\\"text/javascript\\" >
    Talon.componentService.createElement(\\"talon/app\\").then(function(element) {
        document.getElementById(\\"01234\\").appendChild(element);
    });
</script>"
`;

exports[`handlebars-helpers talonApp returns script tags for talon app component with script-src nonce 1`] = `
"<script type=\\"text/javascript\\" nonce=\\"T3stVa1ue\\">
    Talon.componentService.createElement(\\"talon/app\\").then(function(element) {
        document.getElementById(\\"01234\\").appendChild(element);
    });
</script>"
`;

exports[`handlebars-helpers talonInit returns designtime script for preview 1`] = `
"<script src=\\"/test/talon/framework/latest/prod/talon.js\\"></script>
<script src=\\"/test/talon/framework/latest/prod/talondesign.js\\"></script>

    <script type=\\"text/javascript\\" nonce=\\"T3stVa1ue\\">
    Talon.configProvider.register({
        getBasePath: function getBasePath() {
            return \\"/test\\";
        },
        getMode: function getMode() {
            return \\"prod\\";
        },
        getLocale: function getLocale() {
            return \\"fr\\";
        },
        getUser: function getUser() {
            return undefined;
        }
    });
    Talon.themeService.setTheme({\\"themeLayouts\\":{\\"inner\\":{\\"view\\":\\"themeLayoutInner\\"},\\"default\\":{\\"view\\":\\"themeLayoutDefault\\"}}});
    Talon.themeService.setViewToThemeLayoutMap({\\"home\\":\\"themeLayoutInner\\",\\"myPage\\":\\"themeLayoutInner\\",\\"error\\":\\"themeLayoutInner\\"});
    Talon.routingService.registerRoutes([{\\"name\\":\\"home\\",\\"path\\":\\"/\\",\\"isRoot\\":true,\\"view\\":\\"home\\"},{\\"name\\":\\"my-page\\",\\"path\\":\\"/my-page\\",\\"view\\":\\"myPage\\"},{\\"name\\":\\"error\\",\\"path\\":\\"/error\\",\\"isDefault\\":true,\\"view\\":\\"error\\"}]);
    Talon.brandingService.setBrandingProperties({\\"SomeProperty\\":\\"some value\\",\\"SomeMisc\\":\\"misc data\\",\\"MySelfie\\":\\"url(/all/the/angles.jpg)\\"});
    
</script>"
`;

exports[`handlebars-helpers talonInit returns script tags for talon init 1`] = `
"<script src=\\"/test/talon/framework/latest/prod/talon.js\\"></script>

    <script type=\\"text/javascript\\" >
    Talon.configProvider.register({
        getBasePath: function getBasePath() {
            return \\"/test\\";
        },
        getMode: function getMode() {
            return \\"prod\\";
        },
        getLocale: function getLocale() {
            return \\"fr\\";
        },
        getUser: function getUser() {
            return {\\"isGuest\\":false};
        }
    });
    Talon.themeService.setTheme({\\"themeLayouts\\":{\\"inner\\":{\\"view\\":\\"themeLayoutInner\\"},\\"default\\":{\\"view\\":\\"themeLayoutDefault\\"}}});
    Talon.themeService.setViewToThemeLayoutMap({\\"home\\":\\"themeLayoutInner\\",\\"myPage\\":\\"themeLayoutInner\\",\\"error\\":\\"themeLayoutInner\\"});
    Talon.routingService.registerRoutes([{\\"name\\":\\"home\\",\\"path\\":\\"/\\",\\"isRoot\\":true,\\"view\\":\\"home\\"},{\\"name\\":\\"my-page\\",\\"path\\":\\"/my-page\\",\\"view\\":\\"myPage\\"},{\\"name\\":\\"error\\",\\"path\\":\\"/error\\",\\"isDefault\\":true,\\"view\\":\\"error\\"}]);
    Talon.brandingService.setBrandingProperties({\\"SomeProperty\\":\\"some value\\",\\"SomeMisc\\":\\"misc data\\",\\"MySelfie\\":\\"url(/all/the/angles.jpg)\\"});
    
</script>"
`;

exports[`handlebars-helpers talonInit returns script tags for talon init with script-src nonce 1`] = `
"<script src=\\"/test/talon/framework/latest/prod/talon.js\\"></script>

    <script type=\\"text/javascript\\" nonce=\\"T3stVa1ue\\">
    Talon.configProvider.register({
        getBasePath: function getBasePath() {
            return \\"/test\\";
        },
        getMode: function getMode() {
            return \\"prod\\";
        },
        getLocale: function getLocale() {
            return \\"fr\\";
        },
        getUser: function getUser() {
            return {\\"isGuest\\":false};
        }
    });
    Talon.themeService.setTheme({\\"themeLayouts\\":{\\"inner\\":{\\"view\\":\\"themeLayoutInner\\"},\\"default\\":{\\"view\\":\\"themeLayoutDefault\\"}}});
    Talon.themeService.setViewToThemeLayoutMap({\\"home\\":\\"themeLayoutInner\\",\\"myPage\\":\\"themeLayoutInner\\",\\"error\\":\\"themeLayoutInner\\"});
    Talon.routingService.registerRoutes([{\\"name\\":\\"home\\",\\"path\\":\\"/\\",\\"isRoot\\":true,\\"view\\":\\"home\\"},{\\"name\\":\\"my-page\\",\\"path\\":\\"/my-page\\",\\"view\\":\\"myPage\\"},{\\"name\\":\\"error\\",\\"path\\":\\"/error\\",\\"isDefault\\":true,\\"view\\":\\"error\\"}]);
    Talon.brandingService.setBrandingProperties({\\"SomeProperty\\":\\"some value\\",\\"SomeMisc\\":\\"misc data\\",\\"MySelfie\\":\\"url(/all/the/angles.jpg)\\"});
    
</script>"
`;

exports[`handlebars-helpers talonViews returns script tags for talon views 1`] = `
"<script src=\\"/test/talon/view/latest/prod/fr/themeLayoutInner.js\\"></script>
<script src=\\"/test/talon/view/latest/prod/fr/home.js\\"></script>
"
`;
